crates/bonsaidb-macros/tests/ui/schema/invalid_attribute.stderr
error: expected identifier
 --> tests/ui/schema/invalid_attribute.rs:5:25
  |
5 | #[schema(name = "name", "hi")]
  |                         ^^^^

error: supported fields are `name`, `authority`, `collections`, `include` and `core`
 --> tests/ui/schema/invalid_attribute.rs:9:25
  |
9 | #[schema(name = "name", test = "hi")]
  |                         ^^^^
